server_verify.txt
Traceback (most recent call last):
  File "C:\Users\riley\Desktop\The Thing\server.py", line 17, in <module>
    from engine import GameState
  File "C:\Users\riley\Desktop\The Thing\src\engine.py", line 19, in <module>
    from systems.commands import CommandDispatcher, GameContext
  File "C:\Users\riley\Desktop\The Thing\src\systems\commands.py", line 9, in <module>
    from systems.stealth import StealthPosture
  File "C:\Users\riley\Desktop\The Thing\src\systems\stealth.py", line 227
    "suspicion_delta": suspicion_delta,
    ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
